<resources>
    <string name="login_no_culoum">APP数据为空，底部栏目未配置！</string>
    <string name="layout_no_number">对不起，没有数据,请配置底部栏目!</string>
    <string name="app_name">甘禾生活</string>
    <string name="header_search_hint">请输入搜索关键字</string>
    <string name="public_right">)</string>
    <string name="login_title">会员登录</string>
    <string name="login_button_login">登录</string>
    <string name="login_hint_mobile">手机</string>
    <string name="login_hint_password">密码</string>
    <string name="login_text_register">没有账号，免费注册！</string>
    <string name="login_text_forget_pwd">忘记密码?</string>
    <string name="login_text_other_login">其他方式登录</string>
    <string name="login_tip_mobile_empty">手机号码不能为空，请重新输入</string>
    <string name="login_tip_password_empty">密码不能为空，请重新输入</string>
    <string name="login_tip_password_length">密码不能小于6位，请重新输入</string>
    <string name="bindaccount_title">帐号绑定</string>
    <string name="bindaccount_button_bind">绑定账号</string>
    <string name="bindaccount_button_login">立即登录</string>
    <string name="bindaccount_hint_username">绑定用户名</string>
    <string name="bindaccount_hint_password">密码</string>
    <string name="bindaccount_hint_confirmpwd">确认密码</string>
    <string name="register_title">会员注册</string>
    <string name="register_button_regist">注册</string>
    <string name="register_button_verify"> 获取验证码</string>
    <string name="register_hint_username">用户名</string>
    <string name="register_hint_password">密码</string>
    <string name="register_hint_confirmpwd">确认密码</string>
    <string name="register_hint_email">邮箱</string>
    <string name="register_hint_nickName">昵称</string>
    <string name="register_hint_mobile">手机号码</string>
    <string name="register_hint_verify">验证码</string>
    <string name="register_hint_IDCard">身份证号</string>
    <string name="register_text_login">已注册帐号，马上去登录！</string>
    <string name="register_tip_username_empty">用户名不能为空，请重新输入</string>
    <string name="register_tip_mobile_empty">手机号码不能为空，请重新输入</string>
    <string name="register_tip_mobile_format">手机号码格式不正确，请重新输入</string>
    <string name="register_tip_mobile_verify">验证码不能为空，请重新输入</string>
    <string name="register_tip_password_empty">密码不能为空，请重新输入</string>
    <string name="register_tip_password2_empty">确认密码不能为空，请重新输入</string>
    <string name="register_tip_username_length">用户名不能小于3位，请重新输入</string>
    <string name="register_tip_password_length">密码不能小于6位，请重新输入</string>
    <string name="register_tip_password2_length">确认密码不能小于6位，请重新输入</string>
    <string name="register_tip_password_not_equal">两次密码不正确，请重新输入</string>
    <string name="register_tip_password_not_sing">密码过于简单，需要字母和数字组合，请重新输入</string>
    <string name="forgetPwd_title">忘记密码</string>
    <string name="forgetPwd_top">使用已注册的手机号码找回密码</string>
    <string name="forgetPwd_hint_username">您的帐号</string>
    <string name="forgetPwd_hint_mobile">手机号码</string>
    <string name="forgetPwd_hint_code">验证码</string>
    <string name="forgetPwd_button">确认提交</string>
    <string name="mymodify_pwd_title">修改密码</string>
    <string name="mymodify_pwd_old_pwd">旧密码</string>
    <string name="mymodify_pwd_new_pwd1">新密码</string>
    <string name="mymodify_pwd_new_pwd2">确认密码</string>
    <string name="mymodify_pwd_tip_old_pwd_not_null">旧密码不能为空，请重新输入，6到25位！</string>
    <string name="mymodify_pwd_tip_new_pwd1_not_null">新密码不能为空，请重新输入，6到25位！</string>
    <string name="mymodify_pwd_tip_new_pwd2_not_null">确认密码不能为空，请重新输入，6到25位！！</string>
    <string name="mymodify_pwd_tip_new_pwd">两次密码不正确，请重新输入！</string>
    <string name="goods_list_title">商品清单</string>
    <string name="goods_list_price_shop">市场价:</string>
    <string name="goods_list_top_1">人气最高</string>
    <string name="goods_list_top_2">商品价格</string>
    <string name="goods_list_top_3">更新时间</string>
    <string name="goods_details_title">商品详细</string>
    <string name="goods_details_des">商品描述</string>
    <string name="goods_details_base">规格参数</string>
    <string name="goods_details_evaluate">商品评论</string>
    <string name="goods_details_evaluate_text_fun1">全部评论</string>
    <string name="goods_details_evaluate_text_fun2">好评</string>
    <string name="goods_details_evaluate_text_fun3">中评</string>
    <string name="goods_details_evaluate_text_fun4">差评</string>
    <string name="goods_details_evaluate_text_ordertime">购买日期：</string>
    <string name="goods_details_evaluate_button_add">我要评论</string>
    <string name="goods_details_consult">商品咨询</string>
    <string name="goods_details_consult_button_add">我要咨询</string>
    <string name="goods_details_consult_satisfied">满意</string>
    <string name="goods_details_consult_satisfied_not">不满意</string>
    <string name="goods_details_addshoppingCart">加入购物车</string>
    <string name="goods_details_order">立即购买</string>
    <string name="goods_details_price">单价:</string>
    <string name="goods_details_number">数量:</string>
    <string name="goods_details_attr_please_choose">请先选择</string>
    <string name="goods_details_attr_stock_not">该商品库存不足</string>
    <string name="goods_details_image_message_save">是否要保存当前选中图片？</string>
    <string name="goods_category_title">商品分类</string>
    <string name="group_details_title">商品详细</string>
    <string name="group_details_des">商品描述</string>
    <string name="group_details_base">规格参数</string>
    <string name="group_details_evaluate">商品评论</string>
    <string name="group_details_evaluate_text_fun1">全部评论</string>
    <string name="group_details_evaluate_text_fun2">好评</string>
    <string name="group_details_evaluate_text_fun3">中评</string>
    <string name="group_details_evaluate_text_fun4">差评</string>
    <string name="group_details_evaluate_text_ordertime">购买日期：</string>
    <string name="group_details_evaluate_button_add">我要评论</string>
    <string name="group_details_consult">商品咨询</string>
    <string name="group_details_consult_button_add">我要咨询</string>
    <string name="group_details_consult_satisfied">满意</string>
    <string name="group_details_consult_satisfied_not">不满意</string>
    <string name="group_details_addshoppingCart">加入购物车</string>
    <string name="group_details_order">立即购买</string>
    <string name="group_details_price">单价:</string>
    <string name="group_details_number">数量:</string>
    <string name="group_details_attr_please_choose">请先选择</string>
    <string name="group_details_attr_stock_not">该商品库存不足</string>
    <string name="group_details_image_message_save">是否要保存当前选中图片？</string>
    <string name="shoppingcart_title">购物车</string>
    <string name="shoppingcart_text_order_total">总金额:</string>
    <string name="shoppingcart_text_goods_total">商品金额:</string>
    <string name="shoppingcart_text_empty">购物车还没有商品，赶紧去逛逛吧！</string>
    <string name="shoppingcart_text_top_number">您购物车中一共有%1$s件商品</string>
    <string name="shoppingcart_tip_cart_empty">请先选择购买商品</string>
    <string name="shoppingcart_button_accounts">结算</string>
    <string name="shoppingcart_alter_delete_more">是否要删除当前选中商品？</string>
    <string name="shoppingcart_delete_clear_tip">是否要清空所有购物车商品？</string>
    <string name="shoppingcart_stock">库存不足！</string>
    <string name="gotohome">去首页逛逛</string>
    <string name="personal_title">个人中心</string>
    <string name="personal_order_payment">待付款</string>
    <string name="personal_order_delivery">待发货</string>
    <string name="personal_order_receipt">待收货</string>
    <string name="personal_order_evaluate">已完成</string>
    <string name="personal_collect">件商品</string>
    <string name="personal_login_button">立即登录</string>
    <string name="personal_reg_button">立即注册</string>
    <string name="personal_list_allorder">全部订单</string>
    <string name="personal_list_coupon">我的优惠卷</string>
    <string name="personal_list_bonus">我的红包</string>
    <string name="personal_list_gift">我的礼品</string>
    <string name="personal_list_address">收货地址</string>
    <string name="personal_list_collect">我的收藏</string>
    <string name="personal_list_msg">我的消息</string>
    <string name="personal_list_withdraw">提现</string>
    <string name="personal_list_recharge">充值</string>
    <string name="personal_list_books">我的预约</string>
    <string name="personal_list_browse">浏览记录</string>
    <string name="personal_list_user">账户管理</string>
    <string name="personal_list_opinion">留言</string>
    <string name="personal_list_history">浏览历史</string>
    <string name="personal_list_useraccountrecord">账户明细</string>
    <string name="opinion_title">留言</string>
    <string name="opinion_hint_title">请输入主题</string>
    <string name="opinion_hint_comment">请输入内容</string>
    <string name="opinion_tip_title">标题不能为空，请重新输入</string>
    <string name="opinion_tip_comment">内容不能为空，请重新输入</string>
    <string name="opinion_tip_text_type">留言类型：</string>
    <string name="opinion_button_add">我要留言</string>
    <string name="setting_title">设置</string>
    <string name="setting_smartmode">智能模式</string>
    <string name="setting_hqpicture">高质量（适合WiFi环境）</string>
    <string name="setting_normal">低质量（适合2G或3G环境）</string>
    <string name="setting_clear_host">清除本地缓存</string>
    <string name="setting_app_update">更新版本</string>
    <string name="setting_service">官方客服</string>
    <string name="setting_website">官方网站</string>
    <string name="setting_tech">版权声明</string>
    <string name="setting_logout">注销</string>
    <string name="setting_push_accept">推送通知</string>
    <string name="setting_tip_clear_host">是否清除本地缓存？</string>
    <string name="myCollect_title">我的收藏</string>
    <string name="myCollect_alter_message_delete">是否要删除？</string>
    <string name="mySendinfo_title">我的收货地址</string>
    <string name="mySendinfo_text_address">收货地址：</string>
    <string name="mySendinfo_text_postZip">邮编：</string>
    <string name="mySendinfo_alter_message_delete">是否要删除地址？</string>
    <string name="mySendinfo_alter_message_default">是否将当前的设为默认地址？</string>
    <string name="mySendinfo_add_title">新增收货地址</string>
    <string name="mySendinfo_add_hint_consignee">*收货人姓名</string>
    <string name="mySendinfo_add_hint_mobile">*手机号码</string>
    <string name="mySendinfo_add_hint_postCode">邮政编码</string>
    <string name="mySendinfo_add_hint_city">*所在地区</string>
    <string name="mySendinfo_add_hint_address">*详细地址</string>
    <string name="mySendinfo_add_tip_consignee_empty">收货人姓名不能为空，请重新输入</string>
    <string name="mySendinfo_add_tip_mobile_empty">手机号码不能为空，请重新输入</string>
    <string name="mySendinfo_add_tip_mobile_error">手机号码输入不正确，请重新输入</string>
    <string name="mySendinfo_add_tip_zipcode">邮政编码输入不正确，请重新输入</string>
    <string name="mySendinfo_add_tip_postCode_empty">邮政编码不能为空，请重新输入</string>
    <string name="mySendinfo_add_tip_city_empty">所在地区不能为空，请重新输入</string>
    <string name="mySendinfo_add_tip_address_empty">详细地址不能为空，请重新输入</string>
    <string name="myInformation_title">我的资料</string>
    <string name="myInformation_modify_pwd">修改密码</string>
    <string name="myInformation_head">头像</string>
    <string name="myInformation_username">用户名</string>
    <string name="myInformation_realName">昵称</string>
    <string name="myInformation_mobile">手机号码</string>
    <string name="myInformation_birthday">出生日期</string>
    <string name="myInformation_email">邮箱</string>
    <string name="myInformation_regtime">注册时间</string>
    <string name="myInformation_lasttime">最后登录时间</string>
    <string name="mycoupon_title">我的优惠劵</string>
    <string name="mycoupon_notuse">未使用</string>
    <string name="mycoupon_alreadyuse">已使用</string>
    <string name="mycoupon_shop">店铺优惠劵</string>
    <string name="mybonus_title">我的红包</string>
    <string name="mybonus_notuse">未使用</string>
    <string name="mybonus_yesuse">已使用</string>
    <string name="myGoodsHistory_title">浏览历史</string>
    <string name="myGoodsHistory_alter_message_delete">是否要删除？</string>
    <string name="share_title">选择分享方式</string>
    <string name="share_auth_success">授权成功</string>
    <string name="share_auth_cancel">授权取消</string>
    <string name="share_auth_fail">授权失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">用户取消</string>
    <string name="share_fail">分享失败</string>
</resources>