<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bg_yellow"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/forgetPwd_top"
        android:textColor="@color/font_color_yellow"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/forgetpwd_mobile"
                    style="@style/edittext_style_radius_border"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:hint="@string/forgetPwd_hint_mobile"
                    />

                <Button
                    android:id="@+id/forgetpwd_sendButton"
                    style="@style/button_style_fun_border"
                    android:layout_weight="0.3"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_blue_bg"
                    android:text="发送验证码" />
            </LinearLayout>

            <EditText
                android:id="@+id/forgetpwd_verify"
                style="@style/edittext_style_radius_border"
                android:layout_marginTop="5dp"
                android:hint="@string/forgetPwd_hint_code" />

            <Button
                android:id="@+id/forgetpwd_okButton"
                style="@style/button_style_fun_border"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_blue_bg"
                android:text="@string/forgetPwd_button" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>