<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/body_radius_bg"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/login_mobile"
                    style="@style/edittext_style_null_border"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/login_in_user_name_icon"
                    android:hint="@string/login_hint_mobile" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/border_color" />

                <EditText
                    android:id="@+id/login_password"
                    style="@style/edittext_style_null_border"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/login_in_key_icon"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                style="@style/button_style_fun_border"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_orange_bg"
                android:text="@string/login_button_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_text_register"
                    android:textColor="@color/font_color_666666"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_text_forget_pwd"
                    android:textColor="@color/font_color_666666"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_share_login_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/login_share_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/login_text_other_login"
                    android:textColor="@color/font_color_333333"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/login_share_login_title"
                    android:background="@color/lines_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/login_share_login_title"
                    android:background="@color/lines_color" />
            </RelativeLayout>

            <com.ghsh.view.DGridViewNoScroll
                android:id="@+id/login_share_gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:horizontalSpacing="10dp"
                android:listSelector="@color/transparent"
                android:numColumns="3"
                android:verticalSpacing="10dp" />
           
        </LinearLayout>
    </ScrollView>

</LinearLayout>